--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -22,7 +22,12 @@ $colors: (
     "white": #fff,
     "black": #000,
     "main": $main-color,
-    "red": #ff0000,
+    "red": #dec66f55,
+    "brown": #663300,
+    "green": #00882b,
+    "gray":#808080,
+    "yellow":#FFFF00
+    
 );
 
 $mobile-width: 600px;
